--- a/main.css
+++ b/main.css
@@ -5,6 +5,13 @@
     margin-right: 700px;
 }
 
+.sizniki {
+    background-color: rgb(18, 21, 189);
+    font-size: 50px;
+    margin-left: 80px;
+    margin-right: 40px;
+}
+
 .format {
     margin: 40px;
 }
